updated overflow fix

--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     display: flex;
     justify-content: center;
